--- a/googlevr.html
+++ b/googlevr.html
@@ -2,6 +2,6 @@
 <body>
   <h1> DoorsTour Test using Google VR</h1>
   <iframe width="100%" height="700px" allowfullscreen
-frameborder="0" src="index.html?image=img/beach.jpg&is_stereo=false"></iframe>
+frameborder="0" src="index.html?image=img/sample1.jpg&is_stereo=false"></iframe>
 </body>
 <html>
