--- a/googlevr.html
+++ b/googlevr.html
@@ -1,6 +1,8 @@
 <html>
+  <head>
+  <title>DoorsTour</title></head>
 <body>
-  <h1> DoorsTour Test using Google VR</h1>
+  <h1> DoorsTour 360-degree Tour Test using Google VR</h1>
   <iframe width="100%" height="700px" allowfullscreen
 frameborder="0" src="index.html?image=img/sample2.jpg&is_stereo=false"></iframe>
 </body>
