--- a/googlevr.html
+++ b/googlevr.html
@@ -2,7 +2,7 @@
   <head>
   <title>DoorsTour</title></head>
 <body>
-  <img src="/img/doors.png" width="500" height="600">
+  <img src="/img/doors.png">
   <h1> DoorsTour 360-degree Tour Test using Google VR</h1>
   <iframe width="100%" height="700px" allowfullscreen
 frameborder="0" src="index.html?image=img/sample2.jpg&is_stereo=false"></iframe>
