--- a/googlevr.html
+++ b/googlevr.html
@@ -3,7 +3,8 @@
   <title>DoorsTour</title></head>
 <body>
   <h1> DoorsTour 360-degree Tour Test using Google VR</h1>
-  <iframe width="100%" height="700px" allowfullscreen
+  <iframe width="100%" height="400px" allowfullscreen
 frameborder="0" src="index.html?image=img/sample2.jpg&is_stereo=false"></iframe>
+  <img src="/img/doors.png">
 </body>
 <html>
