--- a/googlevr.html
+++ b/googlevr.html
@@ -5,6 +5,6 @@
   <h1> DoorsTour 360-degree Tour Test using Google VR</h1>
   <iframe width="400px" height="400px" allowfullscreen
 frameborder="0" src="index.html?image=img/sample2.jpg&is_stereo=false"></iframe>
-  <img src="/img/door.png">
+  <img src="/img/doors.jpg">
 </body>
 <html>
