--- a/googlevr.html
+++ b/googlevr.html
@@ -1,10 +1,13 @@
 <html>
   <head>
   <title>DoorsTour</title></head>
+  
 <body>
-  <h1> DoorsTour 360-degree Tour Test using Google VR</h1>
+  <div id='vrview'>
+   <h1> DoorsTour 360-degree Tour Test using Google VR</h1>
   <iframe width="400px" height="400px" allowfullscreen
-frameborder="0" src="index.html?image=img/sample2.jpg&is_stereo=false"></iframe>
-  <img src="/img/doors.jpg">
+    frameborder="0" src="index.html?image=img/sample2.jpg&is_stereo=false"></iframe>
+  <img src="/img/doors.jpg"></div>
+  
 </body>
 <html>
