--- a/googlevr.html
+++ b/googlevr.html
@@ -1,6 +1,17 @@
 <html>
   <head>
   <title>DoorsTour</title></head>
+  <script type="text/javascript">
+  function()
+    {
+  vrView.addHotspot('dining room', {
+         pitch: 30, // In degrees. Up is positive.
+          yaw: 20, // In degrees. To the right is positive.
+          radius:   0.05, // Radius of the circular target in meters.
+          distance: 2, // Distance of target from camera in meters.
+    });
+});
+  </script>
   
 <body>
   <div id='vrview'>
